- added fishCount field to Angler Report, sums up while filling out form and submits as hidden element. - somewhat fixed navbar dropdown, its visible now

--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -72,14 +72,6 @@ html, body {
     width: 85%;
 }
 
-.navbar {
-    /*background: rgb(79,109,122);*/
-    /*background: linear-gradient(180deg, rgba(79,109,122,1) 0%, rgba(79,109,122,0.6993172268907564) 84%, rgba(79,109,122,0) 100%);*/
-
-    background: rgb(79,109,122);
-    background: linear-gradient(180deg, rgba(79,109,122,1) 0%, rgba(79,109,122,0.6993172268907564) 95%, rgba(79,109,122,0) 100%);
-}
-
 .card-header .fa {
     transition: .3s transform ease-in-out;
 }
@@ -94,6 +86,14 @@ html, body {
 
 .main-btn {
     background-color: var(--col-blue);
+}
+
+.navbar {
+    /*background: rgb(79,109,122);*/
+    /*background: linear-gradient(180deg, rgba(79,109,122,1) 0%, rgba(79,109,122,0.6993172268907564) 84%, rgba(79,109,122,0) 100%);*/
+
+    background: rgb(79,109,122);
+    background: linear-gradient(180deg, rgba(79,109,122,1) 0%, rgba(79,109,122,0.6993172268907564) 95%, rgba(79,109,122,0) 100%);
 }
 
 .nav-item {
@@ -119,20 +119,19 @@ html, body {
 }
 
 .dropdown-menu {
-    background: none;
+    background: #4F6D7AB2;
     border: none;
 }
 
 .dropdown-item {
-    background: rgba(255,255,255,0.25);
-    color: rgb(90, 97, 102);
+    color: rgba(255, 255, 255, 0.55);
 }
 
 .dropdown-item:hover {
     background-color: rgba(22,96,136,0.0);
     border-left: 3px solid var(--col-blue);
     text-shadow: 0px 0px 6px rgba(255, 255, 255, 0.92);
-    color: rgb(70, 75, 79);
+    color: white;
 
 }
 
@@ -221,3 +220,24 @@ html, body {
     }
 }
 
+.styledA {
+    text-decoration: none;
+}
+
+.form-label {
+    font-size: 1.5em;
+}
+
+#anglerReportTable, #lakeReportTable {
+    position: relative;
+}
+
+.rowLink::before {
+    content: '';
+    display: block;
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 2.5em;
+    margin-top: -0.5rem;
+}
